--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master User Study</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+  <body class="d-flex flex-column">
+    <div id="app" class="d-flex flex-column h-100"></div>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
